--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://cdn.fedapay.com/checkout.js?v=1.1.2"></script>
   </body>
 </html>
